fix(scrollbar): Fix the scrollbar color error in light gtk theme
- 修复在浅色主题的情况下滚动条颜色无法看清问题

--- a/data/applet.css
+++ b/data/applet.css
@@ -218,13 +218,6 @@ scrollbar.horizontal button, scrollbar.horizontal button {
     border: none;
 }
 
-scrollbar.horizontal slider, scrollbar.vertical slider {
-    background: rgba(255, 255, 255, 0.2);
-    border-image: none;
-    border: none;
-    border-radius: 0px;
-}
-
 scrollbar.horizontal slider {
     min-width: 40px;
     min-height: 5px;
@@ -233,12 +226,6 @@ scrollbar.horizontal slider {
 scrollbar.vertical slider {
     min-width: 5px;
     min-height: 40px;
-}
-
-scrollbar.horizontal slider:active, scrollbar.horizontal slider:hover, scrollbar.vertical slider:active, scrollbar.vertical slider:hover{
-    background-color: rgba(255, 255, 255, 0.3);
-    border: none;
-    border-radius: 0px;
 }
 
 button.tasklist-arrow-button {
@@ -279,10 +266,6 @@ button.toggle.kiran-showdesktop-button:checked,
 button.toggle.kiran-showdesktop-button:active
 {
     background: rgba(255, 255, 255, 0.4);
-}
-
-scrolledwindow.category-list-box, scrolledwindow.category-list-box viewport {
-    background: rgba(28, 28, 28, 0.9);
 }
 
 .stack-switcher button{
